@@ -1,5 +1,7 @@
 *SVN*
 
+* Fixed NumberHelper#number_with_delimiter to use "." always for splitting the original number, not the delimiter parameter #7389 [ceefour]
+
 * Autolinking recognizes trailing and embedded . , : ;  #7354 [Jarkko Laine]
 
 * Make TextHelper::auto_link recognize URLs with colons in path correctly, fixes #7268.  [imajes]
